fixed drop down visibility

--- a/style.css
+++ b/style.css
@@ -33,18 +33,18 @@ p {
 }
 
 .price {
-    color: white;
-    font-size: 200px;
-    width: 100%;
-    margin: 5px;
-    text-align: center;     /* will center text in <p>, which is not a flex item */
+  color: white;
+  font-size: 200px;
+  width: 100%;
+  margin: 5px;
+  text-align: center;     /* will center text in <p>, which is not a flex item */
 }
 
 .price-options {
-  background: transparent;
+  background: white;
   padding: 0px;
   font-size: 15px;
-  color: white;
+  color: black;
   border: none;
   text-transform: uppercase;
   font-weight: bold;
